Fixed the heading being too close with padding: 50px;

--- a/style.css
+++ b/style.css
@@ -447,6 +447,7 @@ backdrop-filter: blur(45px);
   color: white;
   font-size: 70px;
   z-index: -10;
+  padding-top: 50px;
 }
 .banner {
   top: 100px;
